kubernetes/default/error-pages/app-internal/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: errors-whoverse-dev
  namespace: default
spec:
parentRefs:
  - name: internal
    namespace: network
  hostnames:
    - errors.whoverse.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: error-pages-internal
          port: 8080
